# asu

./: .gitignore  ARCHITECTURE.md  Containerfile  Containerfile.build  Containerfile.prepare  README.md  podman-compose.microservices.yml  podman-compose.yml  pyproject.toml
.github/workflows/: publish.yml
ansible/: README.md  inventory.ini  playbook.yml
asu/: api.py  asu.py  build.py  build_request.py  config.py  database.py  job_queue.py  main.py  package_resolution.py  package_selection.py  util.py
asu-prepare/: Containerfile  README.md  __init__.py  config.py  main.py  package_changes.py  package_resolution.py  prepare_request.py  pyproject.toml
asu-prepare/tests/: README.md  __init__.py  conftest.py  test_api.py  test_build_request.py  test_integration.py  test_package_changes.py  test_package_resolution.py
asu/routers/: api.py  packages.py  stats.py
asu/services/: __init__.py  build_service.py  prepare_service.py
builder/: .gitignore  ARCHITECTURE.md  Containerfile  Makefile  README.md  STATS_REFACTOR_PLAN.md  config.example.yaml  go.mod
builder/cmd/: main.go
builder/migrations/: 001_initial_schema.sql
misc/: Caddyfile  nginx-microservices.conf
package-changes-service/: README.md  main.py  package_changes.yaml  pyproject.toml
tests/: README_INTEGRATION.md  conftest.py  test_api.py  test_integration_prepare_build.py  test_package_resolution.py  test_package_selection.py  test_packages_api.py  test_services.py  test_util.py  uclient.py
tests/configs/: basic_build.json  hardware_specific.json  language_pack_migration.json  (+1 more)
(+40 files in other folders)
